# CTextExample

./: CMakeLists.txt
cmake/: gtest.cmake  macro.cmake
test/: CMakeLists.txt
test/misc/: abc.cpp  foo.cpp
